# django-project-template

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
{{cookiecutter.directory_name}}/apps/api/: decorators.py  encoders.py  errors.py  response.py  urls.py
{{cookiecutter.directory_name}}/apps/api/auth/: decorators.py
{{cookiecutter.directory_name}}/apps/api/filters/: user.py
{{cookiecutter.directory_name}}/apps/api/forms/: password.py  recovery_code.py  token.py  user.py
{{cookiecutter.directory_name}}/apps/api/middleware/: apikey.py  exceptions.py  signature.py
{{cookiecutter.directory_name}}/apps/api/views/: auth.py  base.py  password.py  recovery_code.py  status.py  token.py  user.py
{{cookiecutter.directory_name}}/apps/core/: auth.py
{{cookiecutter.directory_name}}/apps/core/auth/: backends.py
{{cookiecutter.directory_name}}/apps/core/checkers/: __init__.py  user.py
{{cookiecutter.directory_name}}/apps/core/managers/: base.py  soft_delete.py
{{cookiecutter.directory_name}}/apps/core/models/: __init__.py  api_key.py  base.py  recovery_code.py  token.py  user.py
{{cookiecutter.directory_name}}/apps/core/querysets/: soft_delete.py
{{cookiecutter.directory_name}}/apps/core/serializers/: token.py  user.py
{{cookiecutter.directory_name}}/apps/core/services/: email_notification.py
{{cookiecutter.directory_name}}/conf/: entrypoint.sh  supervisor.conf
{{cookiecutter.directory_name}}/docs/open_api/: swagger.yaml
{{cookiecutter.directory_name}}/docs/open_api/requests/: headers.yaml  parameters.yaml
{{cookiecutter.directory_name}}/docs/open_api/responses/: errors.yaml  metadata.yaml
{{cookiecutter.directory_name}}/docs/open_api/views/: auth.yaml  password.yaml  (+3 more)
{{cookiecutter.directory_name}}/docs/postman/: template.postman_collection.json  template.postman_environment.json
{{cookiecutter.directory_name}}/templates/_emails/: password_recovery.html  registration.html
{{cookiecutter.directory_name}}/{{cookiecutter.project_name}}/: asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.directory_name}}/{{cookiecutter.project_name}}/settings/: base.py  development.py  production.py
(+8 files in other folders)
