[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["BACKBONE <office@backbone.sk>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5"
django_api_forms = "1.0.0rc9"
django-imap-backend = "^0"
django-object-checker = "^1.0.1"
django-filter = "^24.2"
python-dotenv = "^1.0.0"
argon2-cffi = "^23.1.0"
psycopg = {version = "^3.1", extras = ["c"]}
pydantic = "^2.5.3"
sentry-sdk = "^1.11"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]
fabric = "^3.2.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
